native/desktop-macos/headers/desktop_macos.h

typedef struct MetalView MetalView;
typedef void *MetalDeviceRef;
typedef void *MetalCommandQueueRef;
void dispatcher_main_exec_async(void (*f)(void));
void metal_deref_device(MetalDeviceRef device);
MetalCommandQueueRef metal_create_command_queue(MetalDeviceRef device);
void metal_deref_command_queue(MetalCommandQueueRef queue);
struct MetalView *metal_create_view(MetalDeviceRef device);
void metal_drop_view(struct MetalView *view);
void metal_view_set_is_opaque(const struct MetalView *view, bool value);
bool metal_view_get_is_opaque(const struct MetalView *view);