kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


    private static class metal_deref_device {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_deref_device");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void metal_deref_device(MetalDeviceRef device)
     * }
     */
    public static FunctionDescriptor metal_deref_device$descriptor() {
        return metal_deref_device.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void metal_deref_device(MetalDeviceRef device)
     * }
     */
    public static MethodHandle metal_deref_device$handle() {
        return metal_deref_device.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void metal_deref_device(MetalDeviceRef device)
     * }
     */
    public static MemorySegment metal_deref_device$address() {
        return metal_deref_device.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void metal_deref_device(MetalDeviceRef device)
     * }
     */
    public static void metal_deref_device(MemorySegment device) {
        var mh$ = metal_deref_device.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_deref_device", device);
            }
            mh$.invokeExact(device);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_create_command_queue {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_create_command_queue");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MetalCommandQueueRef metal_create_command_queue(MetalDeviceRef device)
     * }
     */
    public static FunctionDescriptor metal_create_command_queue$descriptor() {
        return metal_create_command_queue.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MetalCommandQueueRef metal_create_command_queue(MetalDeviceRef device)
     * }
     */
    public static MethodHandle metal_create_command_queue$handle() {
        return metal_create_command_queue.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MetalCommandQueueRef metal_create_command_queue(MetalDeviceRef device)
     * }
     */
    public static MemorySegment metal_create_command_queue$address() {
        return metal_create_command_queue.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MetalCommandQueueRef metal_create_command_queue(MetalDeviceRef device)
     * }
     */
    public static MemorySegment metal_create_command_queue(MemorySegment device) {
        var mh$ = metal_create_command_queue.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_create_command_queue", device);
            }
            return (MemorySegment)mh$.invokeExact(device);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_deref_command_queue {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_deref_command_queue");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void metal_deref_command_queue(MetalCommandQueueRef queue)
     * }
     */
    public static FunctionDescriptor metal_deref_command_queue$descriptor() {
        return metal_deref_command_queue.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void metal_deref_command_queue(MetalCommandQueueRef queue)
     * }
     */
    public static MethodHandle metal_deref_command_queue$handle() {
        return metal_deref_command_queue.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void metal_deref_command_queue(MetalCommandQueueRef queue)
     * }
     */
    public static MemorySegment metal_deref_command_queue$address() {
        return metal_deref_command_queue.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void metal_deref_command_queue(MetalCommandQueueRef queue)
     * }
     */
    public static void metal_deref_command_queue(MemorySegment queue) {
        var mh$ = metal_deref_command_queue.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_deref_command_queue", queue);
            }
            mh$.invokeExact(queue);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_create_view {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_create_view");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct MetalView *metal_create_view(MetalDeviceRef device)
     * }
     */
    public static FunctionDescriptor metal_create_view$descriptor() {
        return metal_create_view.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct MetalView *metal_create_view(MetalDeviceRef device)
     * }
     */
    public static MethodHandle metal_create_view$handle() {
        return metal_create_view.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct MetalView *metal_create_view(MetalDeviceRef device)
     * }
     */
    public static MemorySegment metal_create_view$address() {
        return metal_create_view.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct MetalView *metal_create_view(MetalDeviceRef device)
     * }
     */
    public static MemorySegment metal_create_view(MemorySegment device) {
        var mh$ = metal_create_view.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_create_view", device);
            }
            return (MemorySegment)mh$.invokeExact(device);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_drop_view {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_drop_view");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void metal_drop_view(struct MetalView *view)
     * }
     */
    public static FunctionDescriptor metal_drop_view$descriptor() {
        return metal_drop_view.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void metal_drop_view(struct MetalView *view)
     * }
     */
    public static MethodHandle metal_drop_view$handle() {
        return metal_drop_view.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void metal_drop_view(struct MetalView *view)
     * }
     */
    public static MemorySegment metal_drop_view$address() {
        return metal_drop_view.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void metal_drop_view(struct MetalView *view)
     * }
     */
    public static void metal_drop_view(MemorySegment view) {
        var mh$ = metal_drop_view.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_drop_view", view);
            }
            mh$.invokeExact(view);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_view_set_is_opaque {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            desktop_macos_h.C_BOOL
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_view_set_is_opaque");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void metal_view_set_is_opaque(const struct MetalView *view, bool value)
     * }
     */
    public static FunctionDescriptor metal_view_set_is_opaque$descriptor() {
        return metal_view_set_is_opaque.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void metal_view_set_is_opaque(const struct MetalView *view, bool value)
     * }
     */
    public static MethodHandle metal_view_set_is_opaque$handle() {
        return metal_view_set_is_opaque.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void metal_view_set_is_opaque(const struct MetalView *view, bool value)
     * }
     */
    public static MemorySegment metal_view_set_is_opaque$address() {
        return metal_view_set_is_opaque.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void metal_view_set_is_opaque(const struct MetalView *view, bool value)
     * }
     */
    public static void metal_view_set_is_opaque(MemorySegment view, boolean value) {
        var mh$ = metal_view_set_is_opaque.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("metal_view_set_is_opaque", view, value);
            }
            mh$.invokeExact(view, value);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class metal_view_get_is_opaque {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_BOOL,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("metal_view_get_is_opaque");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool metal_view_get_is_opaque(const struct MetalView *view)
     * }
     */
    public static FunctionDescriptor metal_view_get_is_opaque$descriptor() {
        return metal_view_get_is_opaque.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool metal_view_get_is_opaque(const struct MetalView *view)
     * }
     */
    public static MethodHandle metal_view_get_is_opaque$handle() {
        return metal_view_get_is_opaque.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool metal_view_get_is_opaque(const struct MetalView *view)
     * }
     */
    public static MemorySegment metal_view_get_is_opaque$address() {
        return metal_view_get_is_opaque.ADDR;
    }
